style: add border under join requests heading

--- a/app/views/teams/show/_join_requests.html.erb
+++ b/app/views/teams/show/_join_requests.html.erb
@@ -1,4 +1,4 @@
-<div class="pb-6 mt-10 space-y-1">
+<div class="pb-6 mt-10 mb-6 border-b border-slate-200 dark:border-slate-700">
   <h1 class="heading">Join Requests</h1>
   <p class="text-soft">
     <%= "There #{join_requests.count == 1 ? 'is' : 'are'} currently #{join_requests.count > 0 ? pluralize(join_requests.count, 'pending join request') : 'no pending join requests'} for this team." %>
