--- a/app/views/teams/show/_join_requests.html.erb
+++ b/app/views/teams/show/_join_requests.html.erb
@@ -1,7 +1,15 @@
 <div class="pb-6 mt-10 mb-6 border-b border-slate-200 dark:border-slate-700">
   <h1 class="heading">Join Requests</h1>
   <p class="text-soft">
-    <%= "There #{join_requests.count == 1 ? 'is' : 'are'} currently #{join_requests.count > 0 ? pluralize(join_requests.count, 'pending join request') : 'no pending join requests'} for this team." %>
+    <% num = join_requests.count %>
+
+    <% if num == 0 %>
+      There are no pending join requests for this team.
+    <% elsif num == 1 %>
+      There is 1 pending join request for this team.
+    <% else %>
+      There are <%= num %> pending join requests for this team.
+    <% end %>
   </p>
 </div>
 
