style(text): use 'text-pretty' instead of 'text-balance'

--- a/app/views/errors/503.html.erb
+++ b/app/views/errors/503.html.erb
@@ -8,8 +8,8 @@
     </div>
 
     <p class="mb-4 text-2xl font-bold tracking-tight sm:text-4xl">Service Unavailable</p>
-    <p class="mb-1 text-soft text-balance">The service you requested is not available at this time.</p>
-    <p class="mb-6 text-soft text-balance">Please try again later, or try one of the links below.</p>
+    <p class="mb-1 text-soft text-pretty">The service you requested is not available at this time.</p>
+    <p class="mb-6 text-soft text-pretty">Please try again later, or try one of the links below.</p>
 
     <div class="flex items-center justify-center gap-x-6">
       <%= link_to :back, class: 'btn btn-white btn-muted gap-2 font-bold' do %>
