--- a/app/views/errors/404.html.erb
+++ b/app/views/errors/404.html.erb
@@ -8,8 +8,8 @@
     </div>
 
     <p class="mb-4 text-2xl font-bold tracking-tight sm:text-4xl">Page Not Found</p>
-    <p class="mb-1 text-soft text-balance">Sorry, we couldn&#8217;t find the page you&#8217;re looking for.</p>
-    <p class="mb-6 text-soft text-balance">Try one of the links below instead.</p>
+    <p class="mb-1 text-soft text-pretty">Sorry, we couldn&#8217;t find the page you&#8217;re looking for.</p>
+    <p class="mb-6 text-soft text-pretty">Try one of the links below instead.</p>
 
     <div class="flex items-center justify-center gap-x-6">
       <%= link_to :back, class: 'btn btn-white btn-muted gap-2 font-bold' do %>
