--- a/app/views/errors/504.html.erb
+++ b/app/views/errors/504.html.erb
@@ -8,8 +8,8 @@
     </div>
 
     <p class="mb-4 text-2xl font-bold tracking-tight sm:text-4xl">Gateway Timeout</p>
-    <p class="mb-1 text-soft text-balance">Sorry, the server took too long to respond.</p>
-    <p class="mb-6 text-soft text-balance">Try refreshing the page, or try one of the links below.</p>
+    <p class="mb-1 text-soft text-pretty">Sorry, the server took too long to respond.</p>
+    <p class="mb-6 text-soft text-pretty">Try refreshing the page, or try one of the links below.</p>
 
     <div class="flex items-center justify-center gap-x-6">
       <%= link_to :back, class: 'btn btn-white btn-muted gap-2 font-bold' do %>
