--- a/app/views/teams/member/_miles_badge.html.erb
+++ b/app/views/teams/member/_miles_badge.html.erb
@@ -1,5 +1,5 @@
 <div class="whitespace-nowrap rounded-full pr-3 pl-2.5 py-1 text-xs font-semibold focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-indigo-200 dark:bg-indigo-900 relative overflow-hidden">
-  <div class="bg-gradient-to-b from-indigo-500 to-indigo-600 absolute left-0 top-0 z-10 max-w-full h-full" style="width: <%= percentage %>%"></div>
+  <div class="bg-gradient-to-b from-indigo-400 to-indigo-500 dark:from-indigo-500 dark:to-indigo-600 absolute left-0 top-0 z-10 max-w-full h-full" style="width: <%= percentage %>%"></div>
 
   <div class="relative flex items-center gap-1.5 z-20 text-slate-50 dark:text-slate-200">
     <%= inline_svg_tag 'icons/ruler-filled.svg', class: 'size-4 drop-shadow-[0_1px_1px_rgba(0,0,0,0.5)] dark:drop-shadow-none shrink-0' %>
