--- a/app/views/teams/member/_member_info.html.erb
+++ b/app/views/teams/member/_member_info.html.erb
@@ -167,7 +167,7 @@
       <%= current_streak %>
       <span class="text-base font-normal text-soft"><%= 'day'.pluralize(current_streak) %></span>
     </p>
-    <p class="my-1 text-soft">
+    <p class="mt-1 mb-4 text-soft">
       <% if current_streak.zero? %>
         No current streak recorded.
       <% elsif current_streak_start_date == current_streak_end_date %>
@@ -176,6 +176,19 @@
         <%= pretty_date(current_streak_start_date, date_style: :relative) %> &ndash; <%= pretty_date(current_streak_end_date, date_style: :relative) %>
       <% end %>
     </p>
+
+    <%= render 'shared/streak_dots', user: member, week_start: team.week_start, exclude_saturday: team.exclude_saturday_from_streak?, exclude_sunday: team.exclude_sunday_from_streak? %>
+    <% if member_is_current %>
+      <p class="mt-1 text-soft text-sm">
+        <% if current_streak_end_date == Date.today %>
+          Go on a run tomorrow to keep your streak!
+        <% elsif current_streak_end_date == Date.yesterday %>
+          Go on a run to extend your streak!
+        <% else %>
+          Go on a run to start a streak!
+        <% end %>
+      </p>
+    <% end %>
   </div>
 
   <!-- Record Streak Card -->
@@ -190,16 +203,22 @@
       <%= record_streak %>
       <span class="text-base font-normal text-soft"><%= 'day'.pluralize(record_streak) %></span>
     </p>
-    <p class="my-1 text-soft">
+    <p class="mt-1 mb-4 text-soft">
       <% if record_streak.zero? %>
         No record streak recorded.
       <% elsif record_streak_start_date == record_streak_end_date %>
         <%= pretty_date(record_streak_start_date, date_style: :relative) %>
-        <span class="my-1 ml-1 help-text">(Most recent run)</span>
       <% else %>
         <%= pretty_date(record_streak_start_date, date_style: :relative) %> &ndash; <%= pretty_date(record_streak_end_date, date_style: :relative) %>
       <% end %>
     </p>
+
+    <div class="flex flex-wrap gap-1 items-center">
+      <span class="text-soft text-sm">Highest milestone reached:</span>
+      <div class="w-max ml-auto">
+        <%= render 'teams/member/streak_badge', percentage: 100, days: record_streak - (record_streak % team.streaks_increment) %>
+      </div>
+    </div>
   </div>
 </div>
 
