--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -10,18 +10,26 @@
       <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Total Miles</h2>
       <p class="text-3xl font-bold">
         <%= user.total_miles %>
-      </p>
-      <p class="text-soft">
-        <%= 'mile'.pluralize(user.total_miles) %>
+        <span class="text-base font-normal text-soft"><%= 'mile'.pluralize(user.total_miles) %></span>
       </p>
     </div>
 
     <!-- Time Spent Running Card -->
     <div class="card">
       <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Time Spent Running</h2>
-      <p class="text-3xl font-bold">
-        <%= precise_time_ago(user.total_duration, format: :short) %>
-      </p>
+      <div class="font-bold flex items-end gap-4">
+        <% precise_time_ago(user.total_duration, format: :short).split(' ').each do |time_part| %>
+          <% if time_part.include?('mo') %>
+            <div>
+              <span class="text-3xl"><%= time_part.chop.chop %></span><sup class="text-muted dark:text-soft text-xl"><%= time_part.last(2) %></sup>
+            </div>
+          <% else %>
+            <div>
+              <span class="text-3xl"><%= time_part.chop %></span><sup class="text-muted dark:text-soft text-xl"><%= time_part.last %></sup>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
       <p class="text-soft">
         <%= precise_time_ago(user.total_duration) %>
       </p>
@@ -39,7 +47,7 @@
         <%= current_streak %>
         <span class="text-base font-normal text-soft"><%= 'day'.pluralize(current_streak) %></span>
       </p>
-      <p class="my-1 text-soft">
+      <p class="mt-1 mb-4 text-soft">
         <% if current_streak.zero? %>
           No current streak recorded.
         <% elsif current_streak_start_date == current_streak_end_date %>
@@ -48,6 +56,19 @@
           <%= pretty_date(current_streak_start_date, date_style: :relative) %> &ndash; <%= pretty_date(current_streak_end_date, date_style: :relative) %>
         <% end %>
       </p>
+
+      <%= render 'shared/streak_dots', user: user %>
+      <% if user === current_user %>
+        <p class="mt-1 text-soft text-sm">
+          <% if current_streak_end_date == Date.today %>
+            Run again tomorrow to keep your streak!
+          <% elsif current_streak_end_date == Date.yesterday %>
+            Log a run to extend your streak!
+          <% else %>
+            Log a run to start a streak!
+          <% end %>
+        </p>
+      <% end %>
     </div>
 
     <!-- Record Streak Card -->
@@ -62,16 +83,22 @@
         <%= record_streak %>
         <span class="text-base font-normal text-soft"><%= 'day'.pluralize(record_streak) %></span>
       </p>
-      <p class="my-1 text-soft">
+      <p class="mt-1 mb-4 text-soft">
         <% if record_streak.zero? %>
           No record streak recorded.
         <% elsif record_streak_start_date == record_streak_end_date %>
           <%= pretty_date(record_streak_start_date, date_style: :relative) %>
-          <span class="my-1 ml-1 help-text">(Most recent run)</span>
         <% else %>
           <%= pretty_date(record_streak_start_date, date_style: :relative) %> &ndash; <%= pretty_date(record_streak_end_date, date_style: :relative) %>
         <% end %>
       </p>
+
+      <div class="flex flex-wrap gap-1 items-center">
+        <span class="text-soft text-sm">Highest milestone reached:</span>
+        <div class="w-max ml-auto">
+          <%= render 'teams/member/streak_badge', percentage: 100, days: record_streak - (record_streak % 10) %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
