--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -134,7 +134,7 @@
         <div class="card">
           <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Phone Number</h2>
           <p class="text-lg font-bold mb-4">
-            <%= number_to_phone(user.phone_number, area_code: true) %>
+            <%= user.formatted_phone_number(:national_with_country_code) %>
           </p>
           <div class="flex items-center gap-2">
             <%= sms_to user.phone_number, class: 'btn btn-white w-full gap-2' do %>
