--- a/app/views/teams/member/_trends.html.erb
+++ b/app/views/teams/member/_trends.html.erb
@@ -12,13 +12,13 @@
         <!-- Date range select -->
         <%= select_tag :trends_date_range, options_for_select(['All season', 'This week', 'Last week', 'This month', 'Last month', 'Custom range'], params[:trends_date_range] || 'This week'),
                         data: { custom_date_range_target: 'select', action: 'custom-date-range#update custom-date-range#search' },
-                        class: 'form-select appearance-none pl-3 pr-10 py-2 border border-r-0 rounded-r-none focus:z-10' %>
+                        class: 'form-select appearance-none pl-3 pr-10 py-2 border [&:not(:focus)]:border-r-transparent rounded-r-none focus:z-10' %>
 
         <!-- Group by select -->
         <%= label_tag :group_by, 'Group by', class: 'sr-only' %>
         <%= select_tag :group_by, options_for_select([['group by day', 'day'], ['group by week', 'week']], params[:group_by] || 'day'),
                         data: { action: 'input->search-form#searchNow' },
-                        class: 'form-select appearance-none pl-3 pr-10 py-2 border border-l-0 rounded-l-none w-max focus:z-10' %>
+                        class: 'form-select appearance-none pl-3 pr-10 py-2 border [&:not(:focus)]:border-l-transparent rounded-l-none w-max focus:z-10' %>
       </div>
     </div>
 
