--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -29,10 +29,10 @@
   </div>
 
   <div id="editTab" data-tabs-target="tab" class="mb-24 <%= params[:tab].blank? || params[:tab] == 'editTab' ? '' : 'hidden' %>">
-    <%= render 'teams/forms/edit_team' %>
+    <%= render 'teams/forms/edit_team', team: @team %>
   </div>
 
   <div id="settingsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'settingsTab' ? '' : 'hidden' %>">
-    <%= render 'teams/forms/edit_settings' %>
+    <%= render 'teams/forms/edit_settings', team: @team %>
   </div>
 </div>
