--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -165,16 +165,58 @@
   <h2 class="mb-2 text-lg font-bold text-slate-700 dark:text-slate-200">Danger Zone</h2>
 </div>
 
-<div class="card">
+<div
+  data-controller="modal"
+  data-modal-hide-modal-class="opacity-0 scale-75 pointer-events-none"
+  data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
+  data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
+  data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
+  class="card"
+>
   <div class="flex flex-wrap gap-4 items-center justify-between">
     <div class="max-w-md">
       <p class="font-bold">Reset settings</p>
       <p class="help-text">Reset all settings to their defaults for a fresh start.</p>
     </div>
 
-    <%= button_to reset_team_settings_path(team), method: :post, data: { turbo: false }, class: 'btn btn-destructive ml-auto gap-2' do %>
+    <!-- Open Reset Team Settings Modal Button -->
+    <button data-action="mousedown->modal#open" data-modal-id="resetTeamSettings" class="btn btn-destructive whitespace-nowrap ml-auto gap-2">
       <%= inline_svg_tag 'icons/settings-reset.svg', class: 'size-5' %>
       Reset settings
-    <% end %>
+    </button>
+  </div>
+
+  <!-- Reset Team Settings Modal Backdrop -->
+  <div
+    data-modal-target="backdrop"
+    data-modal-id="resetTeamSettings"
+    data-action="mousedown->modal#backdropClose"
+    class="modal-backdrop opacity-0 pointer-events-none"></div>
+
+  <!-- Reset Team Settings Modal -->
+  <div
+    id="resetTeamSettings"
+    role="dialog"
+    tabindex="-1"
+    data-modal-target="modal"
+    class="modal opacity-0 scale-75 pointer-events-none"
+  >
+    <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+      <h2 class="text-lg font-semibold leading-none tracking-tight">Reset Team Settings?</h2>
+      <p class="text-soft text-sm">Are you sure you want to reset your settings for the team <span class="font-bold"><%= team.name %></span>? <span class="underline underline-offset-2 font-semibold">This action cannot be undone</span>.</p>
+    </div>
+
+    <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+      <button data-action="mousedown->modal#close" data-modal-id="resetTeamSettings" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Keep settings</button>
+
+      <%= button_to reset_team_settings_path(team), method: :post, data: { turbo: false }, class: 'btn btn-destructive font-bold w-full whitespace-nowrap' do %>
+        Reset settings
+      <% end %>
+    </div>
+
+    <button data-action="mousedown->modal#close" type="button" data-modal-id="resetTeamSettings" class="modal-x-btn">
+      <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+      <span class="sr-only">Close</span>
+    </button>
   </div>
 </div>
