--- a/app/views/shared/_user_photo.html.erb
+++ b/app/views/shared/_user_photo.html.erb
@@ -50,7 +50,7 @@
 <% icon_color_class_map = {
   default: 'text-soft',
   darker: 'text-light',
-  none: 'text-soft',
+  none: '',
 } %>
 
 <% icon_color_class = icon_color_class_map[icon_background] %>
