--- a/app/assets/stylesheets/custom/navigation.css
+++ b/app/assets/stylesheets/custom/navigation.css
@@ -8,10 +8,14 @@
   }
 
   .tab-link {
-    @apply flex flex-col items-center gap-1 py-1 text-normal text-xs font-bold hover:text-indigo-500 dark:hover:text-soft transition duration-200 ease-in-out dark:focus:text-white;
+    @apply flex flex-col items-center gap-1 p-1 font-bold text-xs text-soft hover:text-light transition duration-200 ease-in-out dark:focus:text-white;
 
     &.tab-link-active {
-      @apply px-3 rounded-lg bg-indigo-100 dark:bg-indigo-900 text-indigo-600 dark:text-indigo-400;
+      @apply text-indigo-600 dark:text-indigo-500 hover:text-indigo-500 dark:hover:text-indigo-600;
+
+      &::after {
+        @apply content-[''] block w-10 h-[2.5px] bg-current rounded-full mt-0.5;
+      }
     }
   }
 
